tests/ui/ferrocene/compiler-arguments/upper_a/upper-a_eq-valid-option.stderr
warning[E0602]: unknown lint: `=overflowing_literals`
   |
   = help: did you mean: `overflowing_literals`
   = note: requested on the command line with `-A =overflowing_literals`
   = note: `#[warn(unknown_lints)]` on by default

warning[E0602]: unknown lint: `=overflowing_literals`
   |
   = help: did you mean: `overflowing_literals`
   = note: requested on the command line with `-A =overflowing_literals`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

warning[E0602]: unknown lint: `=overflowing_literals`
   |
   = help: did you mean: `overflowing_literals`
   = note: requested on the command line with `-A =overflowing_literals`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: literal out of range for `u8`
  --> $DIR/upper-a_eq-valid-option.rs:8:17
   |
LL |     let x: u8 = 1000;
   |                 ^^^^
   |
   = note: the literal `1000` does not fit into the type `u8` whose range is `0..=255`
   = note: `#[deny(overflowing_literals)]` on by default

error: aborting due to 1 previous error; 3 warnings emitted

For more information about this error, try `rustc --explain E0602`.
